--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 	<script>
         // V2 Letter Content
         const letterText = {
-            heading: "My Beloved Kenzy,",
+            heading: "My Wife Kenzy,",
             body1: "Today marks a year and one month since the very first 'I love you' was spoken between us. That moment was the spark that changed everything, the beginning of a journey that has filled my life with love, laughter, and meaning.",
             body2: "In this time, you have grown so much—not just as the person I fell deeply in love with, but also as someone chasing her dreams. I want to say congratulations, my love, for starting your college journey. I am beyond proud of you and the hard work, dedication, and passion you carry within you.",
             body3: "Every step you take inspires me. Every success of yours feels like my own victory, because seeing you shine is the greatest joy in my life. You are not only my partner but also my motivation, my safe place, and my reason to always strive to be better.",
@@ -734,3 +734,4 @@
 	</script>
 </body>
 </html>
+
